--- a/Fluxion_Lab/appsettings.json
+++ b/Fluxion_Lab/appsettings.json
@@ -14,7 +14,7 @@
     "MySqlConnection": "Server=localhost;Port=3306;Database=family;User=root;Password=1234;"
   },
   "AzureStorage": {
-    "ConnectionString": "REPLACE_WITH_YOUR_AZURE_STORAGE_CONNECTION_STRING",
+    "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=fluxion;EndpointSuffix=core.windows.net",
     "ContainerName": "fluxion",
     "QueueName": "fluxion-data-sync"
   },
