--- a/Fluxion_Lab/appsettings.json
+++ b/Fluxion_Lab/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "XApikey": "pgH7QzFHJx4w46f#@k*U*I~5Uzi4RvtTwlExp~67@@##*FS",
   "SaaSOptions": {
-    "Mode": "SaaS" // or "OnPrem -SaaS "
+    "Mode": "OnPrem" // or "OnPrem -SaaS "
   },
   "ConnectionStrings": {
     "MySqlConnection": "Server=localhost;Port=3306;Database=family;User=root;Password=1234;"
