--- a/Fluxion_Lab/appsettings.json
+++ b/Fluxion_Lab/appsettings.json
@@ -6,19 +6,25 @@
     }
   },  
   "AllowedHosts": "*",
-  "XApikey": "pgH7QzFHJx4w46f#@k*U*I~5Uzi4RvtTwlExp~67@@##*FS",
+  "XApikey": "YOUR_API_KEY",
   "SaaSOptions": {
     "Mode": "OnPrem" // or "OnPrem -SaaS "
   },
   "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;Port=3306;Database=family;User=root;Password=1234;"
+    "MySqlConnection": "Server=localhost;Port=3306;Database=family;User=root;Password=YOUR_DATABASE_PASSWORD;"
   },
   "AzureStorage": {
-    "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=fluxion;EndpointSuffix=core.windows.net",
+    "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=fluxion;AccountKey=YOUR_AZURE_STORAGE_ACCOUNT_KEY;EndpointSuffix=core.windows.net",
     "ContainerName": "fluxion",
     "QueueName": "fluxion-data-sync"
   },
   "BackupSchedule": {
     "Time": "14:00" 
+  }
+  ,"Sync": {
+    "Enabled": true,
+    "IntervalMinutes": 5,
+    "OnlineServer": "localhost",
+    "LogPath": "SyncLogs"
   }
 }
